--- a/docs/quickstart.adoc
+++ b/docs/quickstart.adoc
@@ -58,7 +58,7 @@ You need to create 2 providers:
 provider "oci" {
   fingerprint      = var.api_fingerprint
   private_key_path = var.api_private_key_path
-  region           = var.regions["oke"]
+  region           = var.region
   tenancy_ocid     = var.tenancy_id
   user_ocid        = var.user_id
 }
@@ -66,7 +66,7 @@ provider "oci" {
 provider "oci" {
   fingerprint      = var.api_fingerprint
   private_key_path = var.api_private_key_path
-  region           = var.regions["home"]
+  region           = var.home_region
   tenancy_ocid     = var.tenancy_id
   user_ocid        = var.user_id
   alias            = "home"
