--- a/docs/topology.adoc
+++ b/docs/topology.adoc
@@ -32,21 +32,23 @@ By default, the following resources are created:
 
 * 1 VCN with Internet, NAT and Service Gateways
 * Route tables for Internet, NAT and Service Gateways
-* 1 regional public subnet for the Bastion host along with its security list
-* 1 regional private subnet for the Operator host along with its NSG
-* 1 private regional worker subnet along with security list
-* 1 public regional load balancer subnet along with security list
-* 1 Bastion host
+* 1 regional public subnet for the bastion host along with its security list
+* 1 regional private subnet for the operator host along with its NSG
+* 1 public control plane subnet
+* 1 private regional worker subnet
+* 1 public regional load balancer
+* 1 bastion host
 * 1 operator host
 * 1 public Kubernetes Cluster with private worker nodes
+* 1 Network Security Group (NSG) for each of control plane, workers and load balancers
 
 [Important]
 ====
 . The Kubernetes Control Plane Nodes run in Oracle's tenancy and are not shown here.
-. Although the recommended approach is to now deploy private clusters, we are currently keeping the default setting to public. This is to give our users the time to adjust other configurations e.g. their CI/CD tools and such.
+. Although the recommended approach is to now deploy private clusters, *we are currently keeping the default setting to public*. This is to give our users the time to adjust other configurations e.g. their CI/CD tools etc.
 ====
 
-The Load Balancers are only created when services of type *LoadBalancer* are deployed.
+The Load Balancers are only created when Kubernetes services of type *LoadBalancer* are deployed or you manually create Load Balancers yourself.
 
 .Multi-AD Default Deployment
 image::images/defaultmad.png[align="center"]
@@ -73,22 +75,16 @@ The following resources are created:
 
 The bastion subnet is regional i.e. in multi-AD regions, the subnet spans all Availability Domains. By default, the bastion subnet is assigned a CIDR of 10.0.0.0/29 giving a maximum possible of 5 assignable IP addresses in the bastion subnet.
 
-The workers subnet has a CIDR of 10.0.64.0/18 assigned by default. This gives the subnet a maximum possible of 16381 IP addresses and therefore number of hosts per subnet. This is enough to scale the cluster to the maximum number of worker nodes (1000) currently allowed by Oracle Container Engine.
+The workers subnet has a CIDR of 10.0.64.0/18 assigned by default. This gives the subnet a maximum possible of 16381 IP addresses. This is enough to scale the cluster to the maximum number of worker nodes (1000) currently allowed by Oracle Container Engine.
 
-The load balancer subnets consist of 2 types:
+The load balancer subnets are of 2 types:
 
 * public
 * private
 
-By default, only the the public load balancer subnet is created. See link:#public-and-internal-load-balancers[Public and Internal Load Balancers] for more details. The private load balancer subnet has a CIDR of 10.0.2.0/27 whereas the public load balancer subnet has a CIDR of 10.0.2.32/27 assigned by default. This allows both subnets to assign a maximum of 29 IP addresses and therefore 9 load balancers can be created in each.
+By default, only the the public load balancer subnet is created. See link:#public-and-internal-load-balancers[Public and Internal Load Balancers] for more details. The private load balancer subnet has a CIDR of 10.0.2.0/27 whereas the public load balancer subnet has a CIDR of 10.0.2.32/27 assigned by default. This allows both subnets to assign a maximum of 29 IP addresses and therefore 9 load balancers can be created in each. You can control the size of your subnets and have more load balancers if required by adjusting the newbit and netnum values for the `subnets` parameter.
 
-The OCI Networking parameters are controlled by the following 3 parameters:
-
-* vcn_cidr
-* newbits
-* netnum
-
-If you need to change the default values, refer to this project's link:terraformoptions.adoc#oci-networking[Networking Documentation] to see how. We recommend working with your network administrator to design your network. The following additional documentation is useful in designing your network:
+The `subnets` parameter govern the boundaries of the subnets. If you need to change the default values, refer to this project's link:terraformoptions.adoc#oci-networking[Networking Documentation] to see how. We recommend working with your network administrator to design your network. The following additional documentation is useful in designing your network:
 
 * {uri-networks-subnets-cidr}[Erik Berg on Networks, Subnets and CIDR]
 * {uri-terraform-cidrsubnet-deconstructed}[Lisa Hagemann on Terraform cidrsubnet]
@@ -96,11 +92,11 @@ If you need to change the default values, refer to this project's link:terraform
 
 Additionally, the following gateways are created:
 
-* Internet Gateway (required)
+* Internet Gateway (required if application is public facing or bastion host is used)
 * NAT Gateway if deployed in link:#public-vs-private-worker-nodes[private mode]
 * Service Gateway
 
-The Service Gateway enables cloud resources without public IP addresses to privately access Oracle services and without the traffic going over the public Internet. Refer to the {uri-oci-service-gateway}[OCI Service Gateway documentation] to understand whether you need to enable it.
+The Service Gateway enables OCI cloud resources without public IP addresses to privately access Oracle services and without the traffic going over the public Internet. Refer to the {uri-oci-service-gateway}[OCI Service Gateway documentation] to understand whether you need to enable it.
 
 === Bastion Host
 
@@ -111,7 +107,7 @@ image::images/bastion.png[align="center"]
 
 The bastion host is created in a public regional subnet. You can create or destroy it anytime with no effect on the Kubernetes cluster by setting the `create_bastion_host = true` in your variable file. You can also turn it on or off by changing the `bastion_state` to `RUNNING` or `STOPPED` respectively.
 
-By default, the bastion host can be accessed from anywhere. However, you can restrict its access to a particular CIDR block using the `bastion_access` parameter which accepts a list of CIDR blocks.
+By default, the bastion host can be accessed from anywhere. However, you can restrict its access to a defined list of CIDR blocks using the `bastion_access` parameter.
 
 You can use the bastion host for the following:
 
@@ -149,12 +145,12 @@ image::images/publiccluster.png[align="center"]
 You can set the Kubernetes cluster to be public and restrict its access to the CIDR blocks A.B.C.D/A and X.Y.Z.X/Z by using the following parameters:
 
 ```
-control_plane_access = "public"
+control_plane_type = "public"
 
-control_plane_access_source = ["A.B.C.D/A","X.Y.Z.X/Z"]
+control_plane_allowed_cidrs = ["A.B.C.D/A","X.Y.Z.X/Z"]
 ```
 
-When deployed in private mode, the Kubernetes endpoint can only be accessed from the operator host.
+When deployed in private mode, the Kubernetes endpoint can only be accessed from the operator host or from a defined list of CIDR blocks specified in `control_plane_allowed_cidrs`.
 
 .Accessing the Kubernetes API endpoint from the operator host
 image::images/privatecluster.png[align="center"]
@@ -166,14 +162,14 @@ The following table maps all possible cluster and workers deployment combination
 [stripes=odd,cols="<.2d,^.2d,^.2d", width="100%"] 
 |===
 |
-|control_plane_access=public
-|control_plane_access=private
+|control_plane_type=public
+|control_plane_type=private
 
-|worker_mode=public
+|worker_type=public
 |X
 |X
 
-|worker_mode=private
+|worker_type=private
 |X
 |X
 
@@ -189,7 +185,7 @@ image::images/publicworkers.png[align="center"]
 
 {bl}
 
-When deployed in public mode, all worker subnets will be deployed as public subnets and route to the Internet Gateway directly. Worker nodes will have both private and public IP addresses. Their private IP addresses will be that of the worker subnet they are part of whereas the public IP address will be allocated from Oracle's pool of public IP addresses.
+When deployed in public mode, all worker subnets will be deployed as public subnets and route to the Internet Gateway directly. Worker nodes will have both private and public IP addresses. Their private IP addresses will be from the range of the worker subnet they are part of whereas the public IP addresses will be allocated from Oracle's pool of public IP addresses.
 
 NodePort and SSH access need to be explicitly enabled in order for the security rules to be properly configured and allow NodePort access.
 
@@ -200,7 +196,7 @@ allow_node_port_access = true
 allow_worker_ssh_access = true
 ----
 
-When deployed in private mode, all worker subnets will be deployed as private subnets and route to the NAT Gateway instead. 
+When deployed in private mode, the worker subnet will be deployed as a private subnet and route to the NAT Gateway instead. 
 
 Additionally, ssh access to the worker nodes *_must_* be done through the bastion host regardless of whether the worker nodes are deployed in public or private mode. If you intend to ssh to your worker nodes, ensure you have also link:terraformoptions.adoc#bastion-host[enabled the creation of the bastion host].
 
@@ -217,9 +213,9 @@ A node pool is a set of hosts within a cluster that all have the same configurat
 * the public ssh key if you wish to ssh to your worker nodes (Optional)
 * the Kubernetes labels to apply to the nodes (Optional)
 
-Node pools enable you to create pools of machines within a cluster that have different configurations. For example, you might create one pool of nodes in a cluster as virtual machines, and another pool of nodes as bare metal machines. A cluster must have a minimum of one node pool, but a node pool need not contain any worker nodes.
+Node pools enable you to create pools of machines within a cluster that have different configurations. For example, you might create one pool of nodes in a cluster as virtual machines and another pool of nodes as bare metal machines.
 
-When using this project to create the node pools, the following is done:
+When using this module to create the node pools, the following is done:
 
 * a number of node pools are created. The number of node pools created is equal to the number of elements in the node_pools parameter e.g.
 
@@ -244,7 +240,7 @@ will create 3 node pools (np1, np2 and np3).
 
 * the node pool names are generated by combining the label_prefix, the node_pool_name_prefix (default value is "np") and the node pool number. The node pool names will therefore have names like labelprefix-np-1, labelprefix-np-2 and so on.
 
-* the Kubernetes version is set automatically to the same version as the cluster.
+* the Kubernetes version is set automatically to the same version as that of the cluster at the time of the node pool's creation.
 
 * the image used is an Oracle Linux image with the version specified. You can also specify your own image OCID. However, note that these 2 parameters are *_mutually exclusive_* i.e. either use Operating System and version *_or_* specify the OCID of your custom image.
 
@@ -253,23 +249,23 @@ will create 3 node pools (np1, np2 and np3).
 ** the compute shape
 ** the node pool size
 ** the boot volume size
+** the Kubernetes label
 
 ----
 node_pools = {
-  np1 = {shape="VM.Standard.E3.Flex",ocpus=2,node_pool_size=2,boot_volume_size=150}
+  np1 = { shape = "VM.Standard.E4.Flex", ocpus = 1, memory = 16, node_pool_size = 1, boot_volume_size = 150, label = { app = "frontend", pool = "np1" } }
   np2 = {shape="VM.Standard.E2.2",node_pool_size=2,boot_volume_size=150}
   np3 = {shape="VM.Standard.E2.2",node_pool_size=1}
 }
 ----
 
-In the above example, workers in node pool np1 will all have a shape of VM.Standard.E3.Flex with boot volume size 150GB whereas workers in node pool np2 will all have a shape of VM.Standard.E2.2 and workers in node pool np3 will all have a shape of VM.Standard.E2.2 but only a single worker node. 
+In the above example, workers in node pool np1 will all have a shape of VM.Standard.E4.Flex with boot volume size 150GB whereas workers in node pool np2 will all have a shape of VM.Standard.E2.2 and workers in node pool np3 will all have a shape of VM.Standard.E2.2 but only a single worker node. 
 
 [IMPORTANT]
 ====
 Note that:
 
 * the public ssh key used is the same as that used for the bastion host.
-* Kubernetes labels are not currently configured. You can still add them to the node pools after they are created.
 ====
 
 ==== Number of Node Pools
@@ -277,7 +273,7 @@ Note that:
 The number, shape and size of the node pools created is controlled by the number of entries in the node_pools parameter. Each key and tuple pair corresponds to 1 node pool. 
 
 ****
-N.B A minimum 3 worker nodes per node pool will be created.
+N.B A minimum 1 worker node per node pool will be created.
 ****
 
 The diagram below shows a cluster with 1 node pool of size 3 i.e. setting the following configuration:
@@ -356,47 +352,65 @@ You can also use internal load balancers. Internal load balancers have only priv
 
 The following parameters govern how load balancers are created with:
 
-* lb_subnet_type
+* load_balancers
 
-* preferred_lb_subnet_type
+* preferred_load_balancer
 
-The table below shows the valid combinations of preferred_lb_subnet_type and subnet_type values.
+The table below shows the valid combinations of preferred_load_balancer and subnet_type values.
 
 .Public and Internal Load Balancer combinations
 [stripes=odd,cols="<.2d,^.2d,^.2d", width="100%"] 
 |===
 |
-|preferred_lb_subnet_type=internal
-|preferred_lb_subnet_type=public
-
-|subnet_type=both
+|preferred_load_balancer=internal
+|preferred_load_balancer=public
+|load_balancers=both
 |X
 |X
 
-|subnet_type=internal
+|load_balancers=internal
 |X
 |
 
-|subnet_type=public
+|load_balancers=public
 |
 |X
 
 |===
 
+==== Using Public Load Balancers
+
+When creating a public load balancer, you *_must_* specify the list of NSGs using annotations e.g.
+
+----
+apiVersion: v1
+kind: Service
+metadata:
+  name: acme-website
+  annotations:
+    oci.oraclecloud.com/oci-network-security-groups: "ocid1.networksecuritygroup...."
+    service.beta.kubernetes.io/oci-load-balancer-security-list-management-mode: "None"
+spec:
+  type: LoadBalancer
+  ....
+----
+
+Note that since we have already added the NodePort range to the public load balancer NSG, you can also disable the security list management and set its value to `"None"`.
 
 ==== Using Internal Load Balancers
 
-If you intend to use internal load balancers, you must ensure the following:
+When creating an internal load balancer, you must ensure the following:
 
-* preferred_lb_subnet is set to "internal"
-* subnet_type is set to either "both" or "internal"
+* `load_balancers` is set to `both` or `internal`. 
+
+You can also set the `preferred_load_balancer` to `internal` so if you happen to use both, the cluster will preference the internal load balancer subnets instead.
 
 .Using Private Load Balancers (worker nodes removed for convenience)
 image::images/privatelbs.png[align="Private Load Balancers"]
 
 {bl}
 
-Even if you set the load balancer subnets to be internal, you still need to set the correct {uri-oci-loadbalancer-annotations}[annotations] when creating internal load balancers. Just setting the subnet to be private is *_not_* sufficient e.g. :
+Note that even if you set the `preferred_load_balancer` to `internal`, you still need to set the correct {uri-oci-loadbalancer-annotations}[annotations] when creating internal load balancers. Just setting the subnet to be private is *_not_* sufficient e.g. :
 
 [source]
 ----
