Updated copyright headers, docs formatting and instructions.
Signed-off-by: Ali Mukadam <ali.mukadam@oracle.com>

--- a/docs/codingconventions.adoc
+++ b/docs/codingconventions.adoc
@@ -10,31 +10,31 @@ endif::[]
 :toc:
 
 :uri-terraform-standard-module-structure: https://www.terraform.io/docs/language/modules/develop/structure.html
+:uri-oci-security-guide: https://docs.oracle.com/en-us/iaas/Content/Security/Concepts/security_guide.htm
 
-This is a list of coding conventions you should observe when contributing code for this project.
-
-Current conventions:
+This project adheres to the following conventions:
 
 - module structure
 - adopting the right case type
-- good names for files and terraform objects (resources, variables, outputs)
+- good names for files and Terraform objects (resources, variables, outputs)
 
-It is not an exhaustive list and it will be updated as we go. In the mean time, your PR reviewer may suggest conventions that are not listed here.
+New conventions may be added to the list in future. All contributions should adhere to the list as published when the contribution is made.
 
 Use PR comments and the GitHub suggestion feature to agree on the final result.
 
 == Module Structure
 
-- We adhere to the {uri-terraform-standard-module-structure}[Terraform Standard Module Structure]
-- Any nested module calls should be in the main file: `main.tf` is the primary entrypoint of the module
-- All variables and ouputs declarations should be in `variables.tf` and `outputs.tf`
-- All variables and outputs should have descriptions
-- Nested modules should exist under the `modules/` folder
-- Examples of using the module should exist under the `examples/` folder and have a README to explain the goal and usage of the example
+- This project adheres to the {uri-terraform-standard-module-structure}[Terraform Standard Module Structure]
+- Any nested module calls must be in the main file: `main.tf` is the primary entrypoint of the module
+- All variables declarations must be in `variables.tf`
+- All ouputs declarations must be in `outputs.tf`
+- All variables and outputs must have descriptions
+- Nested modules must exist under the `modules/` folder
+- Examples of how to use the module must be placed in the examples/ folder and include documentation that explains the purpose and outcomes of each example.
 
 == Documentation format
 
-We use https://asciidoc.org/[AsciiDoc] with the `*.adoc` file extension. The only exception is for the README files that need to be displayed on the Terraform Registry: as the Terraform Registry does not support AsciiDoc, the `README` and certain other documentation must be available in Markdown format.
+This project uses https://asciidoc.org/[AsciiDoc] with the `*.adoc` file extension. The only exception is for the README files that need to be displayed on the Terraform Registry: as the Terraform Registry does not support AsciiDoc, the `README` and certain other documentation must be available in Markdown format.
 
 [NOTE]
 ====
@@ -74,7 +74,7 @@ Links that are used multiple times must be defined in the header using the `:uri
 
 ====
 
-===  Terraform registry requirements
+===  HashiCorp Terraform Registry
 
 - README files must be in Markdown format
 - All links must use absolute path, relative links are not supported
@@ -100,7 +100,6 @@ variable "xyz" {
 
 When defining variables:
 
-. do not hesitate to insert a brief comment in the variable block if it helps to clarify your intention.
 . the type should always be specified. We prefer:
 .. string
 .. boolean
@@ -111,8 +110,10 @@ When defining variables:
 .. match the type specified
 .. be reflected in terraform.tfvars.example
 
+Do not hesitate to insert a brief comment in the variable block if it helps to clarify your intention.
+
 WARNING: No default value for `compartment_id` or any other variables related to provider authentication in module or examples files. The user will have to explicitly set these values.
 
 === Examples
 
-Examples should promote good practices as much as possible e.g. avoid creating resources in the tenancy root compartment.
+Examples should promote good practices as much as possible e.g. avoid creating resources in the tenancy root compartment. Please review the {uri-oci-security-guide}[OCI Security Guide]. 
