--- a/docs/upgrade.adoc
+++ b/docs/upgrade.adoc
@@ -21,22 +21,22 @@
 :uri-upgrade-oke: https://docs.cloud.oracle.com/en-us/iaas/Content/ContEng/Tasks/contengupgradingk8sworkernode.htm
 :uri-variables: {uri-rel-file-base}/variables.tf
 
-This section documents how to upgrade the OKE Cluster using this project. At a high level, upgrading the OKE cluster is fairly straightforward:
+This section documents how to upgrade the OKE cluster using this project. At a high level, upgrading the OKE cluster is fairly straightforward:
 
 1. Upgrade the control plane nodes
 2. Upgrade the worker nodes using either {uri-upgrade-oke}[in-place or out-of-place] approach
 
 This has to be done in order.
 
-This project supports *only* the out-of-place method of upgrading the cluster and worker nodes at the moment.
+NOTE: The out-of-place method is currently the _only_ supported method of upgrading a cluster and worker nodes.
 
-=== Pre-requisites
+== Pre-requisites
 
 . bastion host is created
 . operator host is created
 . instance_principal is enabled on operator
 
-=== Upgrading the control plane nodes
+== Upgrading the control plane nodes
 
 . Locate your `kubernetes_version` in your terraform variable file and change:
 
@@ -68,9 +68,9 @@ terraform apply --target=module.oke.k8s_cluster
 ----
 ****
 
-=== Upgrading the worker nodes using the out-of-place method
+== Upgrading the worker nodes using the out-of-place method
 
-==== Add new node pools
+=== Add new node pools
 1. Add a new node pool in your list of node pools e.g. change
 +
 [source,bash]
@@ -92,11 +92,11 @@ node_pools = {
 }
 ----
 
-and run terraform apply again. (See note above about targeted apply). If you are using Kubernetes labels for your existing applications, you will need to ensure the new node pools also have the same labels. Refer to the `terraform.tfvars.example` file for the format to specify the labels.
+and run `terraform apply` again. (See note above about targeted apply). If you are using Kubernetes labels for your existing applications, you will need to ensure the new node pools also have the same labels. Refer to the `terraform.tfvars.example` file for the format to specify the labels.
 
 When node pools 3 and 4 are created, they will be created with the newer cluster version of Kubernetes. Since you have already upgrade your cluster to `v1.20.8`, node pools 3 and 4 will be running Kubernetes v1.20.8
 
-==== Drain older nodepools
+=== Drain older nodepools
 . Set `upgrade_nodepool=true`. This will instruct the OKE cluster that some node pools will be drained.
 
 . Provide the list of node pools to drain. This should usually be only the old node pools. You don't need to upgrade all the node pools at once.
@@ -106,15 +106,15 @@ When node pools 3 and 4 are created, they will be created with the newer cluster
 node_pools_to_drain = [ "np1", "np2"] 
 ----
 
-. Run terraform apply (see note above about targeted apply):
+. Run `terraform apply` (see note above about targeted apply):
 
 +
 ----
 terraform apply
 ----
 
-==== Delete node pools with older Kuberntes version
-When you are ready, you can now delete the old node pools by them from the list of node pools:
+=== Delete node pools with older Kubernetes version
+When you are ready, you can now delete the old node pools by removing them from the list of node pools:
 
 +
 ----
