--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -7,7 +7,7 @@ All notable changes to this project are documented in this file.
 
 The format is based on {uri-changelog}[Keep a Changelog].
 
-= 4.0.0
+== 4.0.0
 === Breaking changes
 * Set minimum version to Terraform 1.0.0
 * Removed base module and use vcn, bastion and operator modules directly
@@ -23,7 +23,7 @@ The format is based on {uri-changelog}[Keep a Changelog].
 * Changed from security list to NSGs for better flexibility and security (#398)
 
 === Changes
-* Changed default Kubernetes version to v1.20.8 and removed v1.16.8, v1.17.9 from docs.
+* Changed default Kubernetes version to v1.20.11 and removed v1.16.8, v1.17.9 from docs.
 * Added support for GPU and ARM shapes (#302)
 * VCN module upgraded to VCN 3.0.0. This allows supporting multiple cidr blocks (#360)
 * Bastion and operator sub-modules upgraded to 3.0.0 (#183)
@@ -53,7 +53,7 @@ The format is based on {uri-changelog}[Keep a Changelog].
 ** Create the cluster along with the VCN and other resources without WAF enabled by setting `enable_waf=false`
 ** Subsequently enable WAF by setting `enable_waf=true`
 
-= 3.3.0
+== 3.3.0
 
 === Additions
 * Support for using reserved public IP address for NAT Gateway (#311) with new parameter nat_gateway_public_ip_id
@@ -66,7 +66,7 @@ The format is based on {uri-changelog}[Keep a Changelog].
 === Bug fixes
 * Use correct manifest to install Calico as policy (#306)
 
-= 3.2.0 (May 12, 2021)
+== 3.2.0 (May 12, 2021)
 
 === Additions
 * Added faster kubectl script (Thanks @joelezell-conga, @rgmccaw, Richard Exley)
@@ -96,7 +96,7 @@ The format is based on {uri-changelog}[Keep a Changelog].
 === Deletions
 Removed hardcoded WAF CIDRs and used data source instead.
 
-= 3.1.0 (April 6, 2021)
+== 3.1.0 (April 6, 2021)
 
 === Additions 
 
@@ -119,7 +119,7 @@ Removed hardcoded WAF CIDRs and used data source instead.
 * Removed deprecated helm repos
 * Removed tenancy_name
 
-= 3.0.0 (January 14, 2021)
+== 3.0.0 (January 14, 2021)
 
 === Additions
 
@@ -141,7 +141,7 @@ Removed hardcoded WAF CIDRs and used data source instead.
 * Updated default Kubernetes module to 1.18.10
 * Updated and simplified Calico installation (#253)
 
-= 2.3.3 (October 30, 2020)
+== 2.3.3 (October 30, 2020)
 * Upgraded base module to 1.3.3 to temporarily disable OSMS as fix for #225
 
 == 2.3.2 (August 19, 2020)
