--- a/docs/quickstart.adoc
+++ b/docs/quickstart.adoc
@@ -27,13 +27,13 @@
 2. You know the {uri-oci-ocids}[required OCIDs]
 3. You have set the {uri-oci-okepolicy}[necessary OKE policy]
 
-== Pre-requisites
+== Prerequisites
 
 1. git is installed
 2. ssh client is installed
 3. Terraform 1.0.0+ is installed
 
-== Provisioning using this git repo
+== Provision using this git repo
 
 . Clone the repo:
 
@@ -127,7 +127,7 @@ terraform plan
 terraform apply
 ----
 
-== Provisioning using the HashiCorp registry module
+== Provision using the HashiCorp registry module
 
 . In your project root, create a provider.tf file and repeat the steps for creating providers as above.
 
