Added support for in-transit encryption in OKE and custom kms_key for boot volume encryption support (#456)
* operator version changed to 3.0.1 from 3.0.0

Signed-off-by: Srinivasa Nikhil Kota <“srinivasa.nikhil.kota@oracle.com”>

* Added support for in-transit encryption for the data volume's paravirtualized attachment and custom bootvolume kms_key in OKE

Signed-off-by: Srinivasa Nikhil Kota <“srinivasa.nikhil.kota@oracle.com”>

* Modified few variables name and updated instructions, configuration, terraformoptions docs and terraform.tfvars.example file

Signed-off-by: Srinivasa Nikhil Kota <“srinivasa.nikhil.kota@oracle.com”>

* changed variable naming convention to imperative style and added documentation for volume encryption support

Signed-off-by: Srinivasa Nikhil Kota <“srinivasa.nikhil.kota@oracle.com”>

Co-authored-by: Srinivasa Nikhil Kota <“srinivasa.nikhil.kota@oracle.com”>

--- a/docs/instructions.adoc
+++ b/docs/instructions.adoc
@@ -74,6 +74,14 @@ If you wish to use {uri-oci-kms}[OCI KMS] to encrypt Kubernetes secrets, the fol
 * use_encryption must be set to _true_
 * kms_key_id must be provided
 
+If you wish to use {uri-oci-kms}[OCI KMS] to encrypt OKE nodepool boot/block volume, the following is required:
+
+* node_pool_volume_kms_key_id must be provided
+
+If you wish to encrypt data in transit between the instance, the boot volume, and the block volumes.
+
+* enable_pv_encryption_in_transit must be _true_
+
 === Creating the OKE Cluster
 
 Initialize a working directory containing Terraform configuration files:
