--- a/docs/configuration.adoc
+++ b/docs/configuration.adoc
@@ -248,7 +248,7 @@ The Kubernetes Metrics Server parameter controls the installation of {uri-metric
 
 == Configure KMS Integration parameters
 
-The KMS integration parameters control whether {uri-oci-kms}[OCI Key Management Service] will be used for encrypting Kubernetes secrets. Additionally, the bastion and operator hosts must be enabled as well as instance_principal on the operator.
+The KMS integration parameters control whether {uri-oci-kms}[OCI Key Management Service] will be used for encrypting Kubernetes secrets and boot volumes/block volumes. Additionally, the bastion and operator hosts must be enabled as well as instance_principal on the operator.
 
 ----
 create_bastion_host = true
@@ -256,6 +256,8 @@ create_operator = true
 enable_operator_instance_principal = true
 use_encryption = true
 kms_key_id = <kms_key_id>
+enable_pv_encryption_in_transit = false
+node_pool_volume_kms_key_id = <node_pool_volume_kms_key_id>
 ----
 
 OKE also supports enforcing the use of signed images. You can enforce the use of signed image using the following parameters:
