feat: Added support for adding service loadbalancer freeform_tags
Signed-off-by: Nikhil Kota <srinivasa.nikhil.kota@oracle.com>

--- a/docs/terraformoptions.adoc
+++ b/docs/terraformoptions.adoc
@@ -487,6 +487,12 @@ EOT
     environment = "dev"
     role        = "operator"
   }
+  oke = {
+    service_lb  = {
+      environment = "dev"
+      role        = "load balancer"
+    }
+  }
 }`
 |
 `freeform_tags = {
@@ -500,6 +506,12 @@ EOT
   operator = {
     environment = "dev"
     role        = "operator"
+  }
+  oke = {
+    service_lb  = {
+      environment = "dev"
+      role        = "load balancer"
+    }
   }
 }`
 |===
