--- a/docs/terraformoptions.adoc
+++ b/docs/terraformoptions.adoc
@@ -621,6 +621,16 @@ EOT
 |`ocid1.key.oc1....`
 |
 
+|enable_operator_pv_encryption_in_transit
+|Whether to encrypt data in transit between the instance, the boot volume, and the block volumes in Operator.
+|true/false
+|false
+
+|operator_boot_volume_encryption_key_id
+|The id of the OCI KMS key to be used as the master encryption key for Operator's boot volume/block volume encryption..
+|`ocid1.key.oc1....`
+|
+
 |`use_signed_images`
 |Whether to enforce the use of signed images. If set to true, at least 1 RSA key must be provided through image_signing_keys.
 |true/false
