changed the position of the variables in terrformoptions.adoc
Signed-off-by: Nikhil Kota <srinivasa.nikhil.kota@oracle.com>

--- a/docs/instructions.adoc
+++ b/docs/instructions.adoc
@@ -84,7 +84,7 @@ If you wish to encrypt data in transit between the instance, the boot volume, an
 
 If you wish to use {uri-oci-kms}[OCI KMS] to encrypt operator boot/block volume, the following is required:
 
-* operator_boot_volume_encryption_key_id must be provided
+* operator_volume_kms_id must be provided
 
 If you wish to encrypt data in transit between the instance, the boot volume, and the block volumes in operator.
 
